--- a/SportsOrganizer.Server/_Imports.razor
+++ b/SportsOrganizer.Server/_Imports.razor
@@ -8,3 +8,11 @@
 @using Microsoft.JSInterop
 @using SportsOrganizer.Server
 @using SportsOrganizer.Server.Shared
+@using SportsOrganizer.Server.Models
+@using SportsOrganizer.Server.Services
+@using Blazorise
+@using SportsOrganizer.Server.Enums
+@using Microsoft.AspNetCore.Http
+@using Microsoft.Extensions.Localization
+@using Blazored.Toast
+@using Blazored.Toast.Services
