--- a/SportsOrganizer.Server/Pages/Index.razor
+++ b/SportsOrganizer.Server/Pages/Index.razor
@@ -1,9 +1,8 @@
-﻿@page "/"
+﻿@inherits IndexBase
+@page "/"
 
 <PageTitle>Index</PageTitle>
 
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
