--- a/SportsOrganizer.Server/Pages/_Host.cshtml
+++ b/SportsOrganizer.Server/Pages/_Host.cshtml
@@ -1,34 +1,83 @@
 ﻿@page "/"
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components;
+@using Microsoft.AspNetCore.Localization;
+@using SportsOrganizer.Server.Enums
+@using SportsOrganizer.Server.Interfaces
+@using SportsOrganizer.Server.Models
+@using SportsOrganizer.Server.Services
+@using Microsoft.AspNetCore.Http
+@using System.Globalization;
 @namespace SportsOrganizer.Server.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@inject ILiteDbService<AppSettingsModel> LiteDbService
+@inject IConfiguration Configuration
+@inject IHttpContextAccessor HttpContextAccessor
+
+@{
+    var liteDbResult = LiteDbService.GetAll();
+
+    var langObj = liteDbResult.FirstOrDefault(x => x.KeyValueType == KeyValueType.LanguageShort);
+    var language = (langObj != null) ? langObj.Value : Configuration["DefaultSettings:Language"];
+    HttpContextAccessor.HttpContext.Session.SetString("Language", language);
+
+    var themeObj = liteDbResult.FirstOrDefault(x => x.KeyValueType == KeyValueType.Theme);
+    var theme = (themeObj != null) ? themeObj.Value : Configuration["DefaultSettings:Theme"];
+
+    var faviconObj = liteDbResult.FirstOrDefault(x => x.KeyValueType == KeyValueType.Favicon);
+
+    var setupCompleteObj = liteDbResult.FirstOrDefault(x => x.KeyValueType == KeyValueType.SetupComplete);
+
+    var homepageObj = liteDbResult.FirstOrDefault(x => x.KeyValueType == KeyValueType.Homepage);
+    HttpContextAccessor.HttpContext.Session.SetString("Homepage", (homepageObj != null) ? homepageObj.Value : string.Empty);
+
+    var titleObj = liteDbResult.FirstOrDefault(x => x.KeyValueType == KeyValueType.Title);
+    HttpContextAccessor.HttpContext.Session.SetString("Title", (titleObj != null) ? titleObj.Value : string.Empty);
+}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="@language">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/bootstrap/@(theme).min.css" />
+    <link rel="stylesheet" href="fontawesome/css/all.min.css">
+    <link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
+    <link href="_content/Blazorise.Bootstrap5/blazorise.bootstrap5.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="SportsOrganizer.Server.styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="favicon.png"/>
+    @if (faviconObj != null)
+    {
+        var base64Data = Convert.ToBase64String(faviconObj.ImageData);
+        var imgSrc = $"data:image/png;base64,{base64Data}";
+        <link rel="icon" type="image/png" href="@imgSrc">
+    }
+    else
+    {
+        <link rel="icon" type="image/png" href="favicon.png" />
+    }
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
-<body>
-    <component type="typeof(App)" render-mode="ServerPrerendered" />
+<body class="w-100 min-vh-100">
+    @if (setupCompleteObj != null && setupCompleteObj.BoolValue == true)
+    {
+        <component type="typeof(App)" render-mode="ServerPrerendered" />
+    }
+    else
+    {
+        <component type="typeof(Setup)" render-mode="ServerPrerendered" />
+    }
 
     <div id="blazor-error-ui">
-        <environment include="Staging,Production">
+        <environment include="Staging,Production,Development">
             An error has occurred. This application may no longer respond until reloaded.
-        </environment>
-        <environment include="Development">
-            An unhandled exception has occurred. See browser dev tools for details.
         </environment>
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
