--- a/SportsOrganizer.Server/_Imports.razor
+++ b/SportsOrganizer.Server/_Imports.razor
@@ -11,6 +11,7 @@
 @using SportsOrganizer.Server.Models
 @using SportsOrganizer.Server.Services
 @using Blazorise
+@using Blazorise.SpinKit
 @using SportsOrganizer.Server.Enums
 @using Microsoft.AspNetCore.Http
 @using Microsoft.Extensions.Localization
