--- a/SportsOrganizer.Server/Pages/Setup.razor
+++ b/SportsOrganizer.Server/Pages/Setup.razor
@@ -15,8 +15,8 @@
 
 <PageTitle>Sports Organizer Installer</PageTitle>
 
-<section class="w-100 min-vh-100 d-flex justify-content-center align-items-center py-5">
-    <div class="d-flex flex-column align-items-center">
+<section class="w-100 min-vh-100 d-flex justify-content-center align-items-center">
+    <div class="w-100 d-flex flex-column align-items-center justify-content-center">
         <img src="img/logo.svg" alt=@Localizer["LogoAlt"] width="150" height="150" />
         <h1 class="mb-4">Sports Organizer</h1>
 
