--- a/SportsOrganizer.Server/Shared/MainLayout.razor
+++ b/SportsOrganizer.Server/Shared/MainLayout.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>SportsOrganizer</PageTitle>
 
-<div class="page">
+<div class="page w-100 min-vh-100">
     <main>
         <article class="content px-4">
             @Body
