--- a/SportsOrganizer.Server/Pages/_Host.cshtml
+++ b/SportsOrganizer.Server/Pages/_Host.cshtml
@@ -66,7 +66,7 @@
     }
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
-<body class="w-100 min-vh-100">
+<body>
     @if (setupCompleteObj != null && setupCompleteObj.BoolValue == true)
     {
         <component type="typeof(App)" render-mode="ServerPrerendered" />
