--- a/SportsOrganizer.Server/Pages/_Host.cshtml
+++ b/SportsOrganizer.Server/Pages/_Host.cshtml
@@ -34,11 +34,12 @@
     var titleObj = liteDbResult.FirstOrDefault(x => x.KeyValueType == KeyValueType.Title);
     HttpContextAccessor.HttpContext.Session.SetString("Title", (titleObj != null) ? titleObj.Value : string.Empty);
 
-    var providerObj = liteDbResult.FirstOrDefault(x => x.KeyValueType == KeyValueType.DatabaseProvider);
-    HttpContextAccessor.HttpContext.Session.SetString("Provider", (providerObj != null) ? providerObj.DatabaseProvider.ToString() : string.Empty);
+    var copyrightObj = liteDbResult.FirstOrDefault(x => x.KeyValueType == KeyValueType.CopyrightNotice);
+    HttpContextAccessor.HttpContext.Session.SetString("CopyrightNotice", (copyrightObj != null) ? copyrightObj.Value : string.Empty);
 
-    var connectionStringObj = liteDbResult.FirstOrDefault(x => x.KeyValueType == KeyValueType.ConnectionString);
-    HttpContextAccessor.HttpContext.Session.SetString("ConnectionString", (connectionStringObj != null) ? connectionStringObj.Value : string.Empty);
+    var databaseObj = liteDbResult.FirstOrDefault(x => x.KeyValueType == KeyValueType.Database);
+    HttpContextAccessor.HttpContext.Session.SetString("Provider", (databaseObj != null) ? databaseObj.DatabaseProvider.ToString() : string.Empty);
+    HttpContextAccessor.HttpContext.Session.SetString("ConnectionString", (databaseObj != null) ? databaseObj.Value : string.Empty);
 }
 
 <!DOCTYPE html>
@@ -52,6 +53,7 @@
     <link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
     <link href="_content/Blazorise.Bootstrap5/blazorise.bootstrap5.css" rel="stylesheet" />
     <link href="_content/Blazorise.SpinKit/blazorise.spinkit.css" rel="stylesheet" />
+    <link href="_content/Radzen.Blazor/css/default-base.css" rel="stylesheet">
     <link href="css/site.css" rel="stylesheet" />
     <link href="SportsOrganizer.Server.styles.css" rel="stylesheet" />
     @if (faviconObj != null)
@@ -86,5 +88,6 @@
 
     <script src="_framework/blazor.server.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
 </html>
