--- a/SportsOrganizer.Server/Components/Setup/FinishSetupComponent/FinishSetup.razor.css
+++ b/SportsOrganizer.Server/Components/Setup/FinishSetupComponent/FinishSetup.razor.css
@@ -1,1 +1,17 @@
-﻿
+﻿.finish-setup-container {
+    background-color: white;
+    padding: 1.5rem;
+    border: .5px solid #c3c4c7;
+}
+
+@media (max-width: 767px) {
+    .finish-setup-container {
+        width: 90%;
+    }
+}
+
+@media (min-width: 768px) {
+    .finish-setup-container {
+        width: 720px;
+    }
+}
