--- a/SportsOrganizer.Server/_Imports.razor
+++ b/SportsOrganizer.Server/_Imports.razor
@@ -17,3 +17,4 @@
 @using Microsoft.Extensions.Localization
 @using Blazored.Toast
 @using Blazored.Toast.Services
+@using SportsOrganizer.Server.Utils
