--- a/SportsOrganizer.Server/App.razor
+++ b/SportsOrganizer.Server/App.razor
@@ -1,30 +1,6 @@
-﻿@using System.Globalization;
-@using Blazored.Toast.Configuration;
-@inject IHttpContextAccessor HttpContextAccessor
-@inject NavigationManager NavigationManager
-@inject ApplicationDbContextService DbContextService
-@inject CultureProviderService CultureProvider
-
-@{
-    string language = HttpContextAccessor.HttpContext.Session.GetString("Language");
-    var culture = CultureInfo.GetCultureInfo(language);
-
-    if (CultureProvider.GetCurrentCultureInfo() != culture)
-    {
-        var uri = new Uri(NavigationManager.Uri).GetComponents(UriComponents.PathAndQuery, UriFormat.Unescaped);
-        var cultureEscaped = Uri.EscapeDataString(culture.Name);
-        var uriEscaped = Uri.EscapeDataString(uri);
-        NavigationManager.NavigateTo($"Culture/Set?culture={cultureEscaped}&redirectUri={uriEscaped}", forceLoad: true);
-    }
-
-    string providerType = HttpContextAccessor.HttpContext.Session.GetString("Provider");
-    string connectionString = HttpContextAccessor.HttpContext.Session.GetString("ConnectionString");
-
-    if (!string.IsNullOrWhiteSpace(providerType) && !string.IsNullOrWhiteSpace(connectionString) && !DbContextService.IsDbContextSet())
-    {
-        DbContextService.SetDbContext(connectionString, (DatabaseProviderType)Enum.Parse(typeof(DatabaseProviderType), providerType));
-    }
-}
+﻿@using Blazored.Toast.Configuration;
+@using SportsOrganizer.Server.Components.PageNotFoundComponent
+@inherits AppBase
 
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(App).Assembly">
@@ -34,10 +10,7 @@
         <NotFound>
             <PageTitle>Stran ni bila najdena!</PageTitle>
             <LayoutView Layout="@typeof(MainLayout)">
-                <div class="imgbox">
-                    <h1 class="text-center text-danger">Žal iskana stran ni bila najdena!</h1>
-                    <img class="center-fit" src="img/page-not-found.jpg" alt="Stran ni bila najdena slika" />
-                </div>
+                <PageNotFoundBase />
             </LayoutView>
         </NotFound>
     </Router>
