--- a/SportsOrganizer.Server/Pages/_Host.cshtml
+++ b/SportsOrganizer.Server/Pages/_Host.cshtml
@@ -8,38 +8,28 @@
 @using SportsOrganizer.Server.Services
 @using Microsoft.AspNetCore.Http
 @using System.Globalization;
+@using SportsOrganizer.Server.Utils;
 @namespace SportsOrganizer.Server.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @inject ILiteDbService<AppSettingsModel> LiteDbService
 @inject IConfiguration Configuration
-@inject IHttpContextAccessor HttpContextAccessor
+@inject MemoryStorageUtility MemoryStorageUtility
 
 @{
-    var liteDbResult = LiteDbService.GetAll();
+    MemoryStorageUtility.SetValuesFromLiteDb(LiteDbService.GetAll());
 
-    var langObj = liteDbResult.FirstOrDefault(x => x.KeyValueType == KeyValueType.LanguageShort);
-    var language = (langObj != null) ? langObj.Value : Configuration["DefaultSettings:Language"];
-    HttpContextAccessor.HttpContext.Session.SetString("Language", language);
+    var langObj = MemoryStorageUtility.GetValue(KeyValueType.LanguageShort);
+    var language = (langObj != null) ? (string)langObj : Configuration["DefaultSettings:Language"];
+    if (langObj == null) MemoryStorageUtility.SetValue(KeyValueType.LanguageShort, language);
 
-    var themeObj = liteDbResult.FirstOrDefault(x => x.KeyValueType == KeyValueType.Theme);
-    var theme = (themeObj != null) ? themeObj.Value : Configuration["DefaultSettings:Theme"];
+    var themeObj = MemoryStorageUtility.GetValue(KeyValueType.Theme);
+    var theme = (themeObj != null) ? (string)themeObj : Configuration["DefaultSettings:Theme"];
 
-    var faviconObj = liteDbResult.FirstOrDefault(x => x.KeyValueType == KeyValueType.Favicon);
+    var faviconObj = MemoryStorageUtility.GetValue(KeyValueType.Favicon);
+    var favicon = (faviconObj != null) ? (string)faviconObj : "favicon.png";
 
-    var setupCompleteObj = liteDbResult.FirstOrDefault(x => x.KeyValueType == KeyValueType.SetupComplete);
-
-    var homepageObj = liteDbResult.FirstOrDefault(x => x.KeyValueType == KeyValueType.Homepage);
-    HttpContextAccessor.HttpContext.Session.SetString("Homepage", (homepageObj != null) ? homepageObj.Value : string.Empty);
-
-    var titleObj = liteDbResult.FirstOrDefault(x => x.KeyValueType == KeyValueType.Title);
-    HttpContextAccessor.HttpContext.Session.SetString("Title", (titleObj != null) ? titleObj.Value : string.Empty);
-
-    var copyrightObj = liteDbResult.FirstOrDefault(x => x.KeyValueType == KeyValueType.CopyrightNotice);
-    HttpContextAccessor.HttpContext.Session.SetString("CopyrightNotice", (copyrightObj != null) ? copyrightObj.Value : string.Empty);
-
-    var databaseObj = liteDbResult.FirstOrDefault(x => x.KeyValueType == KeyValueType.Database);
-    HttpContextAccessor.HttpContext.Session.SetString("Provider", (databaseObj != null) ? databaseObj.DatabaseProvider.ToString() : string.Empty);
-    HttpContextAccessor.HttpContext.Session.SetString("ConnectionString", (databaseObj != null) ? databaseObj.Value : string.Empty);
+    var setupCompleteObj = MemoryStorageUtility.GetValue(KeyValueType.SetupComplete);
+    var setupComplete = (setupCompleteObj != null) ? (bool)setupCompleteObj : false;
 }
 
 <!DOCTYPE html>
@@ -56,18 +46,11 @@
     <link href="_content/Radzen.Blazor/css/default-base.css" rel="stylesheet">
     <link href="css/site.css" rel="stylesheet" />
     <link href="SportsOrganizer.Server.styles.css" rel="stylesheet" />
-    @if (faviconObj != null)
-    {
-        <link rel="icon" type="image/png" href="@faviconObj.Value">
-    }
-    else
-    {
-        <link rel="icon" type="image/png" href="favicon.png" />
-    }
+    <link rel="icon" type="image/png" href="@favicon">
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
-    @if (setupCompleteObj != null && setupCompleteObj.BoolValue == true)
+    @if (setupComplete)
     {
         <component type="typeof(App)" render-mode="ServerPrerendered" />
     }
