Add page routing.

--- a/SportsOrganizer.Server/Pages/User/ActivityResultsOverviewSelector.razor
+++ b/SportsOrganizer.Server/Pages/User/ActivityResultsOverviewSelector.razor
@@ -1,1 +1,2 @@
-﻿@inherits ActivityResultsOverviewSelectorBase
+﻿@page "/User/Activity-Results-Overview-Selector"
+@inherits ActivityResultsOverviewSelectorBase
