--- a/SportsOrganizer.Server/Pages/User/InsertActivityResultsSelector.razor
+++ b/SportsOrganizer.Server/Pages/User/InsertActivityResultsSelector.razor
@@ -1,1 +1,2 @@
-﻿@inherits InsertActivityResultsSelectorBase
+﻿@page "/User/Insert-Activity-Results-Selector"
+@inherits InsertActivityResultsSelectorBase
