Add 2 injection in each page. Also add PageTitle component.

--- a/SportsOrganizer.Server/Pages/Account/Login.razor
+++ b/SportsOrganizer.Server/Pages/Account/Login.razor
@@ -1,2 +1,4 @@
 ﻿@page "/Account/Login"
 @inherits LoginBase
+
+<PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
