--- a/SportsOrganizer.Server/Pages/Activities.razor
+++ b/SportsOrganizer.Server/Pages/Activities.razor
@@ -1,6 +1,8 @@
 ﻿@page "/Activities"
 @inherits ActivitiesBase
 
+<PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
+
 <h1>ACTIVITIES!!!!</h1>
 
 <h2></h2>
