--- a/SportsOrganizer.Server/Pages/ActivityDetails.razor
+++ b/SportsOrganizer.Server/Pages/ActivityDetails.razor
@@ -1,2 +1,4 @@
 ﻿@page "/Activity-Details"
 @inherits ActivityDetailsBase
+
+<PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
