--- a/SportsOrganizer.Server/Pages/ActivityResults.razor
+++ b/SportsOrganizer.Server/Pages/ActivityResults.razor
@@ -1,2 +1,4 @@
 ﻿@page "/Activity-Results"
 @inherits ActivityResultsBase
+
+<PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
