--- a/SportsOrganizer.Server/Pages/Admin/ActivityEdit.razor
+++ b/SportsOrganizer.Server/Pages/Admin/ActivityEdit.razor
@@ -1,2 +1,4 @@
 ﻿@page "/Admin/Activity-Edit"
 @inherits ActivityEditBase
+
+<PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
