--- a/SportsOrganizer.Server/Pages/Admin/ActivityResultsEdit.razor
+++ b/SportsOrganizer.Server/Pages/Admin/ActivityResultsEdit.razor
@@ -1,2 +1,4 @@
 ﻿@page "/Admin/Activity-Results-Edit"
 @inherits ActivityResultsBase
+
+<PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
