--- a/SportsOrganizer.Server/Pages/Admin/TeamEdit.razor
+++ b/SportsOrganizer.Server/Pages/Admin/TeamEdit.razor
@@ -1,2 +1,4 @@
 ﻿@page "/Admin/Team-Edit"
 @inherits TeamEditBase
+
+<PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
