--- a/SportsOrganizer.Server/Pages/Admin/ThemeSwitch.razor
+++ b/SportsOrganizer.Server/Pages/Admin/ThemeSwitch.razor
@@ -1,2 +1,4 @@
 ﻿@page "/Admin/Theme-Switch"
 @inherits ThemeSwitchBase
+
+<PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
