--- a/SportsOrganizer.Server/Pages/Admin/UserEdit.razor
+++ b/SportsOrganizer.Server/Pages/Admin/UserEdit.razor
@@ -1,2 +1,4 @@
 ﻿@page "/Admin/User-Edit"
 @inherits UserEditBase
+
+<PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
