--- a/SportsOrganizer.Server/Pages/User/ActivityResultsOverview.razor
+++ b/SportsOrganizer.Server/Pages/User/ActivityResultsOverview.razor
@@ -1,2 +1,4 @@
 ﻿@page "/User/Activity-Results-Overview"
 @inherits ActivityResultsOverviewBase
+
+<PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
