--- a/SportsOrganizer.Server/Pages/User/ActivityResultsOverviewSelector.razor
+++ b/SportsOrganizer.Server/Pages/User/ActivityResultsOverviewSelector.razor
@@ -1,2 +1,4 @@
 ﻿@page "/User/Activity-Results-Overview-Selector"
 @inherits ActivityResultsOverviewSelectorBase
+
+<PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
