--- a/SportsOrganizer.Server/Pages/User/InsertActivityResultsSelector.razor
+++ b/SportsOrganizer.Server/Pages/User/InsertActivityResultsSelector.razor
@@ -1,2 +1,4 @@
 ﻿@page "/User/Insert-Activity-Results-Selector"
 @inherits InsertActivityResultsSelectorBase
+
+<PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
