--- a/SportsOrganizer.Server/Pages/Index.razor
+++ b/SportsOrganizer.Server/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @inherits IndexBase
 
-<PageTitle>Index</PageTitle>
+<PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
 
 <h1>Hello, world!</h1>
 
