--- a/SportsOrganizer.Server/Pages/User/InsertActivityResults.razor
+++ b/SportsOrganizer.Server/Pages/User/InsertActivityResults.razor
@@ -1,2 +1,4 @@
 ﻿@page "/User/Insert-Activity-Results"
 @inherits InsertActivityResultsBase
+
+<PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
