--- a/SportsOrganizer.Server/Pages/Admin/ActivityEdit.razor
+++ b/SportsOrganizer.Server/Pages/Admin/ActivityEdit.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Admin/Activity-Edit"
 @inherits ActivityEditBase
+@layout AdminLayout
 
 <PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
