--- a/SportsOrganizer.Server/Pages/Admin/ActivityResultsEdit.razor
+++ b/SportsOrganizer.Server/Pages/Admin/ActivityResultsEdit.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Admin/Activity-Results-Edit"
 @inherits ActivityResultsBase
+@layout AdminLayout
 
 <PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
