--- a/SportsOrganizer.Server/Pages/Admin/BackupAndRestore.razor
+++ b/SportsOrganizer.Server/Pages/Admin/BackupAndRestore.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Admin/Backup-And-Restore"
 @inherits BackupAndRestoreBase
+@layout AdminLayout
 
 <PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
