--- a/SportsOrganizer.Server/Pages/Admin/Index.razor
+++ b/SportsOrganizer.Server/Pages/Admin/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Admin/"
 @inherits IndexBase
+@layout AdminLayout
 
 <PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
