--- a/SportsOrganizer.Server/Pages/Admin/ThemeCostumization.razor
+++ b/SportsOrganizer.Server/Pages/Admin/ThemeCostumization.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Admin/Theme-Costumization"
 @inherits ThemeCostumizationBase
+@layout AdminLayout
 
 <PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
