--- a/SportsOrganizer.Server/Pages/Admin/ThemeSelector.razor
+++ b/SportsOrganizer.Server/Pages/Admin/ThemeSelector.razor
@@ -1,4 +1,5 @@
-﻿@page "/Admin/Theme-Switch"
-@inherits ThemeSwitchBase
+﻿@page "/Admin/Theme-Selector"
+@inherits ThemeSelectorBase
+@layout AdminLayout
 
 <PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
