--- a/SportsOrganizer.Server/Pages/Admin/UserEdit.razor
+++ b/SportsOrganizer.Server/Pages/Admin/UserEdit.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Admin/User-Edit"
 @inherits UserEditBase
+@layout AdminLayout
 
 <PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
