--- a/SportsOrganizer.Server/Pages/User/ActivityResultsOverview.razor
+++ b/SportsOrganizer.Server/Pages/User/ActivityResultsOverview.razor
@@ -1,4 +1,5 @@
 ﻿@page "/User/Activity-Results-Overview"
 @inherits ActivityResultsOverviewBase
+@layout UserLayout
 
 <PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
