--- a/SportsOrganizer.Server/Pages/User/ActivityResultsOverviewSelector.razor
+++ b/SportsOrganizer.Server/Pages/User/ActivityResultsOverviewSelector.razor
@@ -1,4 +1,5 @@
 ﻿@page "/User/Activity-Results-Overview-Selector"
 @inherits ActivityResultsOverviewSelectorBase
+@layout UserLayout
 
 <PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
