--- a/SportsOrganizer.Server/Pages/User/Index.razor
+++ b/SportsOrganizer.Server/Pages/User/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/User/"
 @inherits IndexBase
+@layout UserLayout
 
 <PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
