--- a/SportsOrganizer.Server/Pages/User/InsertActivityResults.razor
+++ b/SportsOrganizer.Server/Pages/User/InsertActivityResults.razor
@@ -1,4 +1,5 @@
 ﻿@page "/User/Insert-Activity-Results"
 @inherits InsertActivityResultsBase
+@layout UserLayout
 
 <PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
