--- a/SportsOrganizer.Server/Pages/Admin/BasicInfoEdit.razor
+++ b/SportsOrganizer.Server/Pages/Admin/BasicInfoEdit.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Admin/Basic-Info-Edit"
 @inherits BasicInfoEditBase
+@layout AdminLayout
 
 <PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
