--- a/SportsOrganizer.Server/Pages/Admin/HomepageEdit.razor
+++ b/SportsOrganizer.Server/Pages/Admin/HomepageEdit.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Admin/Homepage-Edit"
 @inherits HomepageEditBase
+@layout AdminLayout
 
 <PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
