--- a/SportsOrganizer.Server/Pages/Admin/TeamEdit.razor
+++ b/SportsOrganizer.Server/Pages/Admin/TeamEdit.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Admin/Team-Edit"
 @inherits TeamEditBase
+@layout AdminLayout
 
 <PageTitle>@Localizer["PageTitle"] - @((string)MemoryStorage.GetValue(KeyValueType.Title))</PageTitle>
